[ADD] Flux architecture added to project: Actions, Dispatcher, Stores, API's. Modules added: flux, axios, keymirror, events. [UPD] Server config file updated: apiPrefix and port added.

--- a/app/server/config.json
+++ b/app/server/config.json
@@ -1,4 +1,6 @@
 {
+  "apiPrefix" : "http://localhost:8080/api",
+  "port" : "8080",
   "mongodb": {
     "name" : "pets",
     "uri" : "mongodb://localhost:27017/"
