--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.19.0",
     "body-parser": "^1.19.0",
+    "events": "^3.0.0",
     "express": "^4.17.1",
+    "flux": "^3.1.3",
+    "keymirror": "^0.1.1",
     "less": "^3.10.3",
     "mongodb": "^3.3.4",
     "morgan": "^1.9.1",
