--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "events": "^3.0.0",
     "express": "^4.17.1",
     "flux": "^3.1.3",
+    "fs": "0.0.1-security",
     "keymirror": "^0.1.1",
     "less": "^3.10.3",
     "mongodb": "^3.3.4",
     "morgan": "^1.9.1",
+    "multer": "^1.4.2",
     "path": "^0.12.7",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
